--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
   </head>
   <body>
     <header class="header">
+      <div class="container header-box">
       <a class="header-link" href="./index.html"
         ><img class="logo-img" src="./img/interno.png" alt="Interno"
       /></a>
       <nav class="header-nav">
         <ul class="nav-list">
           <li class="nav-item">
-            <a class="nav-link" href="./index.html"></a>Home
+            <a class="nav-link active" href="./index.html"></a>Home
           </li>
           <li class="nav-item"><a class="nav-link" href="#"></a>About Us</li>
           <li class="nav-item"><a class="nav-link" href="#"></a>Services</li>
@@ -36,17 +37,21 @@
           <li class="nav-item"><a class="nav-link" href="#"></a>Contact Us</li>
         </ul>
       </nav>
+    </div>
     </header>
     <main class="main">
       <section class="main-hero">
+        <div class="container hero-box">
         <h1 class="hero-title">Let's Create Your Dream Interior</h1>
         <p class="hero-text">
           The world needs innovators and problem solvers who turn
         </p>
         <p class="hero-text">challenges into greater opportunities.</p>
-        <button type="button" class="hero-button">Get Started</button>
+        <button type="button" class="hero-button">Get Started &#8250;</button>
+      </div>
       </section>
       <section class="main-information">
+        <div class="container">
         <ul class="information-list">
           <li class="information-item">
             <h2 class="information-title">Interior Design</h2>
@@ -73,8 +78,10 @@
             <button type="button" class="information-button">View More</button>
           </li>
         </ul>
+      </div>
       </section>
       <section class="main-recommendation">
+        <div class="container">
         <h2 class="recommendation-title">
           We Tackle The Most Challenging Designs
         </h2>
@@ -91,8 +98,10 @@
         <button type="button" class="recommendation-button">
           Get Free Estimate
         </button>
+      </div>
       </section>
       <section class="main-review">
+        <div class="container">
         <h2 class="review-title">What the People Thinks</h2>
         <h2 class="review-title">About Interno</h2>
         <ul class="reviews-list">
@@ -121,8 +130,10 @@
             </p>
           </li>
         </ul>
+      </div>
       </section>
       <section class="main-brands">
+        <div class="container">
         <ul class="brands-list">
           <li class="brands-item">
             <a href="#" class="brands-link"
@@ -162,8 +173,10 @@
             /></a>
           </li>
         </ul>
+      </div>
       </section>
       <section class="main-projects">
+        <div class="container">
         <h2 class="project-title">Recent Projects</h2>
         <p class="project-text">
           With tools to make every part of your process more human and a support
@@ -214,8 +227,10 @@
             <button type="button" class="projects-button">&#8250;</button>
           </li>
         </ul>
+      </div>
       </section>
       <section class="main-statistics">
+        <div class="container">
         <ul class="statistics-list">
           <li class="statistics-item">
             <h2 class="statistics-title">12</h2>
@@ -234,8 +249,10 @@
             <p class="statistics-text">Happy Customers</p>
           </li>
         </ul>
+      </div>
       </section>
       <section class="main-blogs">
+        <div class="container">
         <h2 class="blog-title">Recent Blogs</h2>
         <p class="blog-text">Get updates about our latest trends and techniques used in</p>
         <p class="blog-text">interior design project works.</p>
@@ -277,15 +294,19 @@
             <button type="button" class="blogs-button">&#8250;</button>
           </li>
         </ul>
+      </div>
       </section>
       <section class="main-consultation">
+        <div class="container">
         <h2 class="consultation-title">Wanna join the interno?</h2>
         <p class="consultation-text">Contact Us & Get a Free Consultation</p>
         <button type="button" class="consultation-button">Connect With us &#8250;</button>
+      </div>
       </section>
     </main>
     <footer class="footer">
       <section class="footer-gids">
+        <div class="container">
         <a class="footer-link" href="./index.html"
         ><img class="logo-img" src="./img/interno.png" alt="Interno"/></a>
         <p class="gid-text">
@@ -329,12 +350,15 @@
           </address>
           </li>
         </ul>
+      </div>
       </section>
       <section class="footer-copyright">
+        <div class="container">
         <h2 class="copyright-title">
           Copyright &#169; Interno &#124; Designed by
           <span class="copyright-span">Victorflow</span> Templates - Powered by <span class="copyright-span">Webflow</span>
         </h2>
+      </div>
       </section>
     </footer>
   </body>
