--- a/index.html
+++ b/index.html
@@ -47,35 +47,35 @@
           The world needs innovators and problem solvers who turn
         </p>
         <p class="hero-text">challenges into greater opportunities.</p>
-        <button type="button" class="hero-button">Get Started &#8250;</button>
+        <button type="button" class="hero-button">Get Started</button>
       </div>
       </section>
       <section class="main-information">
         <div class="container">
         <ul class="information-list">
           <li class="information-item">
-            <h2 class="information-title">Interior Design</h2>
-            <p class="information-text">
+            <h2 class="information-title title-one">Interior Design</h2>
+            <p class="information-text text-one">
               Enhancing the interior to achieve a healthier environment for the
               people using right space.
             </p>
-            <button type="button" class="information-button">View More</button>
+            <button type="button" class="information-button button-one">View More</button>
           </li>
           <li class="information-item">
-            <h2 class="information-title">Furniture</h2>
-            <p class="information-text">
+            <h2 class="information-title title-two">Furniture</h2>
+            <p class="information-text text-two">
               Movable articles that are used to make a room or building suitable
               for living or working.
             </p>
-            <button type="button" class="information-button">View More</button>
+            <button type="button" class="information-button button-two">View More</button>
           </li>
           <li class="information-item">
-            <h2 class="information-title">Flooring</h2>
-            <p class="information-text">
+            <h2 class="information-title title-three">Flooring</h2>
+            <p class="information-text text-three">
               Thin object any finished material applied over a floor structure
               to provide a walking surface.
             </p>
-            <button type="button" class="information-button">View More</button>
+            <button type="button" class="information-button button-three">View More</button>
           </li>
         </ul>
       </div>
@@ -98,6 +98,7 @@
         <button type="button" class="recommendation-button">
           Get Free Estimate
         </button>
+        <img src="./img/kitchen.png" alt="Kitchen" class="recommendation-img">
       </div>
       </section>
       <section class="main-review">
