--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       </div>
       </section>
       <section class="main-recommendation">
-        <div class="container">
+        <div class="container recommendation-box">
         <h2 class="recommendation-title">
           We Tackle The Most Challenging Designs
         </h2>
@@ -98,32 +98,33 @@
         <button type="button" class="recommendation-button">
           Get Free Estimate
         </button>
+        <img class="recommendation-img" src="./img/kitchen.png" alt="kitchen">
       </div>
       </section>
       <section class="main-review">
-        <div class="container">
-        <h2 class="review-title">What the People Thinks</h2>
-        <h2 class="review-title">About Interno</h2>
+        <div class="container review-box">
+        <h2 class="review-title review-subject">What the People Thinks</h2>
+        <h2 class="review-title review-heading">About Interno</h2>
         <ul class="reviews-list">
           <li class="reviews-item">
-            <h2 class="reviews-title">Lisa Clairton</h2>
-            <p class="reviews-text">New York, USA</p>
+            <h2 class="reviews-title reviews-usa">Lisa Clairton</h2>
+            <p class="reviews-subtitle">New York, USA</p>
             <p class="reviews-text">
               We selected Interno interior because of rigorous design background
               & education.
             </p>
           </li>
           <li class="reviews-item">
-            <h2 class="reviews-title">David Knight</h2>
-            <p class="reviews-text">Sydney, Australia</p>
+            <h2 class="reviews-title reviews-australia">David Knight</h2>
+            <p class="reviews-subtitle">Sydney, Australia</p>
             <p class="reviews-text">
               The team exceeded our expectations and emerged as leaders of our
               project’s.
             </p>
           </li>
           <li class="reviews-item">
-            <h2 class="reviews-title">Lisa Clairton</h2>
-            <p class="reviews-text">Paris, France</p>
+            <h2 class="reviews-title reviews-france">Lisa Clairton</h2>
+            <p class="reviews-subtitle">Paris, France</p>
             <p class="reviews-text">
               They balanced the architectural vision and the project realities
               beautifully.
