--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
       </section>
       <section class="main-recommendation">
         <div class="container recommendation-box">
+          <div class="recommendation-div">
         <h2 class="recommendation-title">
           We Tackle The Most Challenging Designs
         </h2>
@@ -93,11 +94,17 @@
           an insatiable curiosity about transformative trends challenging the
           status.
         </p>
+        <div class="recommendation-case">
+          <img class="case-img" src="./img/phone.png" alt="phone">
+          <div>
         <p class="recommendation-world">012345678</p>
-        <p class="recommendation-text">Call Us Anytime</p>
+        <p class="recommendation-text rec-text">Call Us Anytime</p>
+      </div>
+      </div>
         <button type="button" class="recommendation-button">
           Get Free Estimate
         </button>
+      </div>
         <img class="recommendation-img" src="./img/kitchen.png" alt="kitchen">
       </div>
       </section>
