--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </p>
         <div class="recommendation-case">
           <img class="case-img" src="./img/phone.png" alt="phone">
-          <div>
+          <div class="rec-box">
         <p class="recommendation-world">012345678</p>
         <p class="recommendation-text rec-text">Call Us Anytime</p>
       </div>
@@ -114,28 +114,44 @@
         <h2 class="review-title review-heading">About Interno</h2>
         <ul class="reviews-list">
           <li class="reviews-item">
+            <div class="reviews-box">
+            <img class="reviews-img" src="./img/lisausa.png" alt="Lisa">
+            <div class="rev-box">
             <h2 class="reviews-title reviews-usa">Lisa Clairton</h2>
             <p class="reviews-subtitle">New York, USA</p>
+          </div>
+          </div>
             <p class="reviews-text">
               We selected Interno interior because of rigorous design background
               & education.
             </p>
           </li>
           <li class="reviews-item">
+            <div class="reviews-box">
+            <img class="reviews-img" src="./img/davidaustralia.png" alt="David">
+            <div class="rev-box">
             <h2 class="reviews-title reviews-australia">David Knight</h2>
             <p class="reviews-subtitle">Sydney, Australia</p>
+          </div>
+          </div>
             <p class="reviews-text">
               The team exceeded our expectations and emerged as leaders of our
               project’s.
             </p>
           </li>
           <li class="reviews-item">
+            <div class="reviews-box">
+            <img class="reviews-img" src="./img/lisafrance.png" alt="Lisa">
+            <div class="rev-box">
             <h2 class="reviews-title reviews-france">Lisa Clairton</h2>
             <p class="reviews-subtitle">Paris, France</p>
+          </div>
+          </div>
             <p class="reviews-text">
               They balanced the architectural vision and the project realities
               beautifully.
             </p>
+          </div>
           </li>
         </ul>
       </div>
@@ -143,7 +159,7 @@
       <section class="main-brands">
         <div class="container">
         <ul class="brands-list">
-          <li class="brands-item">
+          <li class="brands-item brands-home">
             <a href="#" class="brands-link"
               ><img
                 src="./img/modernhome.png"
@@ -151,7 +167,7 @@
                 class="brands-img"
             /></a>
           </li>
-          <li class="brands-item">
+          <li class="brands-item brands-interior">
             <a href="#" class="brands-link"
               ><img
                 src="./img/stylevintageinterior.png"
@@ -159,12 +175,12 @@
                 class="brands-img"
             /></a>
           </li>
-          <li class="brands-item">
+          <li class="brands-item brands-brand">
             <a href="#" class="brands-link"
               ><img src="./img/brand.png" alt="Brand" class="brands-img"
             /></a>
           </li>
-          <li class="brands-item">
+          <li class="brands-item brands-nature">
             <a href="#" class="brands-link"
               ><img
                 src="./img/naturehome.png"
@@ -172,7 +188,7 @@
                 class="brands-img"
             /></a>
           </li>
-          <li class="brands-item">
+          <li class="brands-item brands-classic">
             <a href="#" class="brands-link"
               ><img
                 src="./img/classicdesignstudio.png"
@@ -185,6 +201,7 @@
       </section>
       <section class="main-projects">
         <div class="container">
+          <div class="project-box">
         <h2 class="project-title">Recent Projects</h2>
         <p class="project-text">
           With tools to make every part of your process more human and a support
@@ -193,6 +210,7 @@
         <p class="project-text">
           excited to help you, getting started with us never been easier.
         </p>
+      </div>
         <ul class="projects-list">
           <li class="projects-item">
             <img
@@ -200,9 +218,13 @@
               alt="Winery Dry Creek"
               class="projects-img"
             />
-            <h3 class="projects-title">Winery Dry Creek Building</h3>
+            <div class="projects-box">
+              <div class="proj-box">
+            <h3 class="projects-title proj-title">Winery Dry Creek Building</h3>
             <p class="projects-text">Art Modern</p>
+          </div>
             <button type="button" class="projects-button">&#8250;</button>
+          </div>
           </li>
           <li class="projects-item">
             <img
@@ -210,9 +232,13 @@
               alt="Workplace"
               class="projects-img"
             />
+            <div class="projects-box">
+              <div class="proj-box">
             <h3 class="projects-title">Creative Workplace Design</h3>
             <p class="projects-text">Minimalist</p>
+          </div>
             <button type="button" class="projects-button">&#8250;</button>
+          </div>
           </li>
           <li class="projects-item">
             <img
@@ -220,9 +246,13 @@
               alt="Bedroom"
               class="projects-img"
             />
+            <div class="projects-box">
+              <div class="proj-box">
             <h3 class="projects-title">Bedroom Interior Pot Work</h3>
             <p class="projects-text">Modern</p>
+          </div>
             <button type="button" class="projects-button">&#8250;</button>
+          </div>
           </li>
           <li class="projects-item">
             <img
@@ -230,9 +260,13 @@
               alt="Light Ambience Sepia"
               class="projects-img"
             />
-            <h3 class="projects-title">Light Ambience Sepia Design</h3>
+            <div class="projects-boxfour">
+              <div class="proj-boxfour">
+            <h3 class="projects-title proj-title">Light Ambience Sepia Design</h3>
             <p class="projects-text">Scandinavian</p>
+          </div>
             <button type="button" class="projects-button">&#8250;</button>
+          </div>
           </li>
         </ul>
       </div>
