--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
       </div>
       </section>
       <section class="main-statistics">
-        <div class="container">
+        <div class="container statistics-box">
         <ul class="statistics-list">
           <li class="statistics-item">
             <h2 class="statistics-title">12</h2>
@@ -294,10 +294,13 @@
       </div>
       </section>
       <section class="main-blogs">
-        <div class="container">
+        <div class="container blogs-div">
+          <div class="blog-box">
         <h2 class="blog-title">Recent Blogs</h2>
         <p class="blog-text">Get updates about our latest trends and techniques used in</p>
         <p class="blog-text">interior design project works.</p>
+      </div>
+      <div class="blogs-box">
         <ul class="blogs-list">
           <li class="blogs-item">
             <p class="blogs-text">Kitchen Design</p>
@@ -336,6 +339,7 @@
             <button type="button" class="blogs-button">&#8250;</button>
           </li>
         </ul>
+      </div>
       </div>
       </section>
       <section class="main-consultation">
