--- a/index.html
+++ b/index.html
@@ -303,50 +303,62 @@
       <div class="blogs-box">
         <ul class="blogs-list">
           <li class="blogs-item">
-            <p class="blogs-text">Kitchen Design</p>
+            <p class="blogs-text blogs-kitdes">Kitchen Design</p>
             <h3 class="blogs-title">Residential Interior Designer In New York, USA</h3>
-            <p class="blogs-text">November 23, 2021</p>
+            <div class="blog-div">
+            <p class="blogs-world">November 23, 2021</p>
             <button type="button" class="blogs-button">&#8250;</button>
+          </div>
           </li>
           <li class="blogs-item">
-            <p class="blogs-text">Living Room</p>
+            <p class="blogs-text blogs-livrm">Living Room</p>
             <h3 class="blogs-title">How To Choose The Best Wall Art & Decor House?</h3>
-            <p class="blogs-text">November 23, 2021</p>
+            <div class="blog-div">
+            <p class="blogs-world">November 23, 2021</p>
             <button type="button" class="blogs-button">&#8250;</button>
+          </div>
           </li>
           <li class="blogs-item">
-            <p class="blogs-text">Minimalist Interior</p>
+            <p class="blogs-text blogs-minint">Minimalist Interior</p>
             <h3 class="blogs-title">Tips To Increase The Interior Value Of Your House</h3>
-            <p class="blogs-text">November 23, 2021</p>
+            <div class="blog-div">
+            <p class="blogs-world">November 23, 2021</p>
             <button type="button" class="blogs-button">&#8250;</button>
+          </div>
           </li>
           <li class="blogs-item">
-            <p class="blogs-text">Kitchen Design</p>
+            <p class="blogs-text blogs-deskit">Kitchen Design</p>
             <h3 class="blogs-title">Best Solution For Any Office & Business Interior</h3>
-            <p class="blogs-text">November 23, 2021</p>
+            <div class="blog-div">
+            <p class="blogs-world">November 23, 2021</p>
             <button type="button" class="blogs-button">&#8250;</button>
+          </div>
           </li>
           <li class="blogs-item">
-            <p class="blogs-text">Living Room</p>
+            <p class="blogs-text blogs-rmliv">Living Room</p>
             <h3 class="blogs-title">Get Solution For Building Construction Work</h3>
-            <p class="blogs-text">November 23, 2021</p>
+            <div class="blog-div">
+            <p class="blogs-world">November 23, 2021</p>
             <button type="button" class="blogs-button">&#8250;</button>
+          </div>
           </li>
           <li class="blogs-item">
-            <p class="blogs-text">Minimalist Interior</p>
+            <p class="blogs-text blogs-intmin">Minimalist Interior</p>
             <h3 class="blogs-title">Attain The Best Finish For The Kitchen Cabinets</h3>
-            <p class="blogs-text">November 23, 2021</p>
+            <div class="blog-div">
+            <p class="blogs-world">November 23, 2021</p>
             <button type="button" class="blogs-button">&#8250;</button>
+          </div>
           </li>
         </ul>
       </div>
       </div>
       </section>
       <section class="main-consultation">
-        <div class="container">
+        <div class="container consultation-box">
         <h2 class="consultation-title">Wanna join the interno?</h2>
         <p class="consultation-text">Contact Us & Get a Free Consultation</p>
-        <button type="button" class="consultation-button">Connect With us &#8250;</button>
+        <button type="button" class="consultation-button">Connect With us</button>
       </div>
       </section>
     </main>
