--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <header class="header">
       <div class="container header-box">
       <a class="header-link" href="./index.html"
-        ><img class="logo-img" src="./img/interno.png" alt="Interno"
+        ><img class="header-img" src="./img/interno.png" alt="Interno"
       /></a>
       <nav class="header-nav">
         <ul class="nav-list">
@@ -151,7 +151,6 @@
               They balanced the architectural vision and the project realities
               beautifully.
             </p>
-          </div>
           </li>
         </ul>
       </div>
@@ -364,23 +363,23 @@
     </main>
     <footer class="footer">
       <section class="footer-gids">
-        <div class="container">
+        <div class="container gids-box">
+          <div class="gid-box">
         <a class="footer-link" href="./index.html"
         ><img class="logo-img" src="./img/interno.png" alt="Interno"/></a>
         <p class="gid-text">
           We are the leading architect and interior design firm in the world.
         </p>
         <ul class="networks-list">
-          <li class="networks-item">
-            <a href="#" class="networks-link"><img src="./img/facebook.png" alt="Facebook" class="networks-img"/></a>
-            <a href="#" class="networks-link"><img src="./img/twitter.png" alt="Twitter" class="networks-img"/></a>
-            <a href="#" class="networks-link"><img src="./img/linkedln.png" alt="Linkedln"  class="networks-img"/></a>
-            <a href="#" class="networks-link"><img src="./img/instagram.png" alt="Instagram"  class="networks-img"/></a>
-          </li>
+        <li class="networks-item"><a href="#" class="networks-link"><img src="./img/facebook.png" alt="Facebook" class="networks-img"/></a></li>
+        <li class="networks-item"><a href="#" class="networks-link"><img src="./img/twitter.png" alt="Twitter" class="networks-img"/></a></li>
+        <li class="networks-item"><a href="#" class="networks-link"><img src="./img/linkedln.png" alt="Linkedln"  class="networks-img"/></a></li>
+        <li class="networks-item"><a href="#" class="networks-link"><img src="./img/instagram.png" alt="Instagram"  class="networks-img"/></a></li>
         </ul>
-        <h2 class="pages-title">Pages</h2>
+      </div>
         <ul class="pages-list">
           <li class="pages-item">
+            <h2 class="pages-title">Pages</h2>
             <p class="pages-text">Style Guide</p>
             <p class="pages-text">Protected</p>
             <p class="pages-text">Licenses</p>
@@ -388,9 +387,9 @@
             <p class="pages-text">404</p>
           </li>
         </ul>
-        <h2 class="explore-title">Explore</h2>
         <ul class="explore-list">
           <li class="explore-item">
+            <h2 class="explore-title">Explore</h2>
             <p class="explore-text">About Us</p>
             <p class="explore-text">Recent Blog</p>
             <p class="explore-text">Pricing Plan</p>
@@ -398,9 +397,9 @@
             <p class="explore-text">Contact Us</p>
           </li>
         </ul>
-        <h2 class="contact-title">Contact</h2>
         <ul class="contact-list">
           <li class="contact-item">
+            <h2 class="contact-title">Contact</h2>
             <address class="contact-address">
             <a href="https://www.google.com/maps/search/53,+East+Birchwood+Ave.+Brooklyn,+New+York+11201,+USA.a/@40.8934966,-74.2924019,10z/data=!3m1!4b1?entry=ttu&g_ep=EgoyMDI0MTExMy4xIKXMDSoASAFQAw%3D%3D" class="contact-link">53, East Birchwood Ave. Brooklyn, New York 11201, USA.a</a>
             <a href="mailto:contact@interno.com" class="contact-link">contact@interno.com</a>
