--- a/index.html
+++ b/index.html
@@ -380,21 +380,25 @@
         <ul class="pages-list">
           <li class="pages-item">
             <h2 class="pages-title">Pages</h2>
+            <div class="pages-box">
             <p class="pages-text">Style Guide</p>
             <p class="pages-text">Protected</p>
             <p class="pages-text">Licenses</p>
             <p class="pages-text">Changelog</p>
             <p class="pages-text">404</p>
+          </div>
           </li>
         </ul>
         <ul class="explore-list">
           <li class="explore-item">
             <h2 class="explore-title">Explore</h2>
+            <div class="explore-box">
             <p class="explore-text">About Us</p>
             <p class="explore-text">Recent Blog</p>
             <p class="explore-text">Pricing Plan</p>
             <p class="explore-text">Our Projects</p>
             <p class="explore-text">Contact Us</p>
+          </div>
           </li>
         </ul>
         <ul class="contact-list">
