--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </header>
     <main class="main">
       <section class="main-hero">
-        <div class="container hero-box">
+        <div class="container">
         <h1 class="hero-title">Let's Create Your Dream Interior</h1>
         <p class="hero-text">
           The world needs innovators and problem solvers who turn
