--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <section class="main-information">
         <div class="container">
         <ul class="information-list">
-          <li class="information-item">
+          <li class="information-item inf-one">
             <h2 class="information-title title-one">Interior Design</h2>
             <p class="information-text text-one">
               Enhancing the interior to achieve a healthier environment for the
@@ -61,7 +61,7 @@
             </p>
             <button type="button" class="information-button button-one">View More</button>
           </li>
-          <li class="information-item">
+          <li class="information-item inf-two">
             <h2 class="information-title title-two">Furniture</h2>
             <p class="information-text text-two">
               Movable articles that are used to make a room or building suitable
@@ -69,7 +69,7 @@
             </p>
             <button type="button" class="information-button button-two">View More</button>
           </li>
-          <li class="information-item">
+          <li class="information-item inf-three">
             <h2 class="information-title title-three">Flooring</h2>
             <p class="information-text text-three">
               Thin object any finished material applied over a floor structure
