--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <p class="reviews-subtitle">Sydney, Australia</p>
           </div>
           </div>
-            <p class="reviews-text">
+            <p class="reviews-text reviews-world">
               The team exceeded our expectations and emerged as leaders of our
               project’s.
             </p>
@@ -147,7 +147,7 @@
             <p class="reviews-subtitle">Paris, France</p>
           </div>
           </div>
-            <p class="reviews-text">
+            <p class="reviews-text reviews-version">
               They balanced the architectural vision and the project realities
               beautifully.
             </p>
