--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       <section class="main-brands">
         <div class="container">
         <ul class="brands-list">
-          <li class="brands-item brands-home">
+          <li class="brands-item">
             <a href="#" class="brands-link"
               ><img
                 src="./img/modernhome.png"
@@ -166,7 +166,7 @@
                 class="brands-img"
             /></a>
           </li>
-          <li class="brands-item brands-interior">
+          <li class="brands-item">
             <a href="#" class="brands-link"
               ><img
                 src="./img/stylevintageinterior.png"
@@ -174,12 +174,12 @@
                 class="brands-img"
             /></a>
           </li>
-          <li class="brands-item brands-brand">
+          <li class="brands-item">
             <a href="#" class="brands-link"
               ><img src="./img/brand.png" alt="Brand" class="brands-img"
             /></a>
           </li>
-          <li class="brands-item brands-nature">
+          <li class="brands-item">
             <a href="#" class="brands-link"
               ><img
                 src="./img/naturehome.png"
@@ -187,7 +187,7 @@
                 class="brands-img"
             /></a>
           </li>
-          <li class="brands-item brands-classic">
+          <li class="brands-item">
             <a href="#" class="brands-link"
               ><img
                 src="./img/classicdesignstudio.png"
