--- a/index.html
+++ b/index.html
@@ -381,11 +381,11 @@
           <li class="pages-item">
             <h2 class="pages-title">Pages</h2>
             <div class="pages-box">
-            <p class="pages-text">Style Guide</p>
-            <p class="pages-text">Protected</p>
-            <p class="pages-text">Licenses</p>
-            <p class="pages-text">Changelog</p>
-            <p class="pages-text">404</p>
+            <a class="pages-link" href="#">Style Guide</a>
+            <a class="pages-link" href="#">Protected</a>
+            <a class="pages-link" href="#">Licenses</a>
+            <a class="pages-link" href="#">Changelog</a>
+            <a class="pages-link" href="#">404</a>
           </div>
           </li>
         </ul>
@@ -393,11 +393,11 @@
           <li class="explore-item">
             <h2 class="explore-title">Explore</h2>
             <div class="explore-box">
-            <p class="explore-text">About Us</p>
-            <p class="explore-text">Recent Blog</p>
-            <p class="explore-text">Pricing Plan</p>
-            <p class="explore-text">Our Projects</p>
-            <p class="explore-text">Contact Us</p>
+            <a class="explore-link" href="#">About Us</a>
+            <a class="explore-link" href="#">Recent Blog</a>
+            <a class="explore-link" href="#">Pricing Plan</a>
+            <a class="explore-link" href="#">Our Projects</a>
+            <a class="explore-link" href="#">Contact Us</a>
           </div>
           </li>
         </ul>
